@@ -2,6 +2,14 @@
 Current Development Version: WSPR-4.0
 
 
+2014-04-11 Greg Beam <ki7mt@yahoo.com>
+
+* removed g95 checks as they're no longer needed
+* added basic gfortran check to aclocal.m4
+* tested builds on Win32 and Linux
+* fixed typo's 
+
+
 2014-04-10 Greg Beam <ki7mt@yahoo.com>
 
 * cleanup pthread_mutex warnings
